--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12.6"
 dependencies = [
     "django>=6.0.1",
     "environs>=14.5.0",
+    "gunicorn>=23.0.0",
     "stripe>=14.1.0",
+    "whitenoise>=6.11.0",
 ]
